# travel-ai

./: .env.example  .gitignore  PLAN.md  README.md  main.py  pyproject.toml  rules.md
agent/: __init__.py  core.py  prompts.py  rules.py  session.py  workspace.py
config/: model.md  rule.md  settings.py  soul.md
llm/: __init__.py  anthropic_llm.py  base.py
memory/: manager.py
tests/: conftest.py
tests/integration/: test_agent_memory.py  test_workspace_isolation.py
tests/smoke/: test_smoke.py
tests/unit/: test_knowledge_base.py  test_memory.py  test_rules.py  test_session.py  test_settings.py  test_tool_registry.py  test_workspace.py
tools/: __init__.py  base.py  knowledge_base.py  registry.py  web_search.py
workspace/default/sessions/20260307_232326/: conversation.md  history.json  meta.json
workspace/sessions/20260307_221724/: history.json
workspace/sessions/20260307_222022/: history.json
