[project]
name = "travel-ai"
version = "0.4.0"
description = "Intelligent Travel Assistant Agent"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "ddgs>=0.1.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "config", "llm", "memory", "tools"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["agent", "config", "llm", "memory", "tools"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "smoke: end-to-end tests requiring real API key (deselect with '-m not smoke')",
    "integration: integration tests (may be slow)",
    "unit: fast unit tests",
]

[tool.poetry]
package-mode = false